Added the new Wortshatz group to prject.
Also user can select own wordshatz group to practice.

--- a/index.html
+++ b/index.html
@@ -3,31 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Latein Practice 1.0</title>
+    <title>Latein Practice 1.1</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
         <!-- Başlangıç Ekranı -->
         <div id="welcome-screen">
-            <h1>Latein Practice 1.0</h1>
+            <h1>Latein Practice 1.1</h1>
             <h2>Willkommen!</h2>
             <button id="start-btn" class="btn">Start</button>
             <button id="help-btn" class="btn">Hilfe</button>
         </div>
-        <!-- Oyun Ekranı (YENİ YAPI) -->
+
+        <!-- Kelime Grubu Seçim Ekranı -->
+        <div id="selection-screen" class="hidden">
+            <h2>Wortschatz auswählen</h2>
+            <p class="selection-info">Wähle die Gruppen aus, die du üben möchtest.</p>
+            <div id="word-list-options">
+                <!-- Kelime grupları buraya JavaScript ile eklenecek -->
+            </div>
+            <button id="start-practice-btn" class="btn" disabled>Übung starten</button>
+        </div>
+
+        <!-- Oyun Ekranı -->
         <div id="game-screen" class="hidden">
-            <div id="game-top-bar">
-                <button id="exit-btn" class="btn-icon">X</button>
-                <p id="question-counter-display">Frage: <span id="question-counter">0 / 10</span></p>
+            <div id="game-header">
+                <p>Punkte: <span id="score">0</span></p>
+                <p>Frage: <span id="question-counter">0 / 10</span></p>
             </div>
-            <div id="main-score-display">
-                <span id="score">0</span>
-                <p>Punkte</p>
-            </div>
-            <div id="timer-container">
-                <div id="timer-bar"></div>
-            </div>
+            <button id="exit-btn" class="btn-icon">X</button>
+            <div id="timer-container"><div id="timer-bar"></div></div>
             <h2 id="question-word"></h2>
             <div id="answer-buttons">
                 <button class="btn btn-answer"></button>
@@ -37,6 +43,7 @@
             </div>
             <button id="pass-btn" class="btn">Passen (1)</button>
         </div>
+
         <!-- Sonuç Ekranı -->
         <div id="score-screen" class="hidden">
             <h2>Spiel beendet!</h2>
@@ -67,6 +74,11 @@
     <audio id="correct-sound" src="sounds/correct.mp3"></audio>
     <audio id="wrong-sound" src="sounds/wrong.mp3"></audio>
     <audio id="end-sound" src="sounds/end.mp3"></audio>
+
+    <!-- Kelime Grupları (script.js'den ÖNCE yüklenmeli) -->
+    <script src="words/wortschatz1.js"></script>
+    <script src="words/wortschatz2.js"></script>
+    <!-- Gelecekte yeni grup eklemek için: <script src="words/wortschatz3.js"></script> -->
 
     <script src="script.js"></script>
 </body>
