Reorganize: use only words/ folder wortschatz files and enable all 4 groups

--- a/index.html
+++ b/index.html
@@ -78,7 +78,8 @@
     <!-- Kelime Grupları (script.js'den ÖNCE yüklenmeli) -->
     <script src="words/wortschatz1.js"></script>
     <script src="words/wortschatz2.js"></script>
-    <!-- Gelecekte yeni grup eklemek için: <script src="words/wortschatz3.js"></script> -->
+    <script src="words/wortschatz3.js"></script>
+    <script src="words/wortschatz4.js"></script>
 
     <script src="script.js"></script>
 </body>
